update styles.css for alignment issues again

--- a/styles.css
+++ b/styles.css
@@ -87,3 +87,28 @@ input[type="checkbox"] {
   border: 0px solid;
 }
 
+@media screen and (max-width: 833px) {
+  .input-field {
+    width: 80%;
+  }
+  select {
+    width: 90%;
+  }
+}
+
+@media screen and (max-width: 520px) {
+  .labels {
+    width: 100%;
+    text-align: left;
+  }
+  .answerBlock {
+    width: 80%;
+    float: left;
+  }
+  .input-field {
+    width: 100%;
+  }
+  select {
+    width: 100%;
+  }
+}
